Fixed spelling error for disabled

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1272,9 +1272,9 @@
             <td style="background-color: #7C0303; color: #FFF; font-family: Arial, sans-serif; font-weight: bold; width:80px;"><em>&nbsp;&nbsp;Fitness</em></td>
             <td><input type="text" name="attr_Fitness" title="@{Fitness}" class="short"/></td>
             <td><input type="text" name="attr_conadj" title="@{conadj}" class="sheet-short" value="0"/></td>
-            <td><input type="number" class="short" disabled></td>
+            <td><input type="number" class="short" disabled/></td>
             <td><input type="text" name="attr_conres" title="@{conres}" class="sheet-short" value="0"/><button type="roll" name="roll_conres-check" title="%{conres-check}" value="/gmroll [[1d100cs<1cf>100+(?{Modifier?|0})]]&le;[[@{conres}]] [Con Res Survive]"></button></td>
-            <td><input type="number" class="short" disbaled="true"></td>
+            <td><input type="number" class="short" disabled></td>
             <td><input type="text" name="attr_conregen" title="@{conregen}" class="sheet-short" value="0"/></td>
             <td><input type="text" name="attr_con2notes" title="@{con2notes}"></td>
     </tr>
