[SavageWorlds-Tabbed] Adding data-i18n
Adding missing data-i18n to Savage Worlds Tabbed sheet

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6433,10 +6433,10 @@
 						    <h1 class="sheet-colHeader" data-i18n="engrams">Engrams</h1>
 						    <input type="checkbox" class="sheet-hideEngrams" name="attr_hideEngrams" /><span class="sheet-showhide"></span>
 						    <div class='sheet-base sheet-engramsDeets' style="position: relative; top:-40px;">
-						        <div class='sheet-col' style='width: 70%; margin: 0px; padding: 0px; font-size: .9em; font-weight: bold;'>Engram</div>
-							<div class='sheet-col' style='width: 16%; margin: 0px; margin-left: -3px; padding: 0px; text-align: center; font-size: .9em; font-weight: bold;'>AMS</div>
-							<div class='sheet-col' style='width: 8%; margin: 0px; padding: 0px; text-align: center; font-size: .9em; font-weight: bold;'>Active</div>
-							<fieldset class="repeating_engrams">
+						        <div data-i18n="engram" class='sheet-col' style='width: 70%; margin: 0px; padding: 0px; font-size: .9em; font-weight: bold;'>Engram</div>
+						        <div data-i18n="ams" class='sheet-col' style='width: 16%; margin: 0px; margin-left: -3px; padding: 0px; text-align: center; font-size: .9em; font-weight: bold;'>AMS</div>
+						        <div data-i18n="active" class='sheet-col' style='width: 8%; margin: 0px; padding: 0px; text-align: center; font-size: .9em; font-weight: bold;'>Active</div>
+							    <fieldset class="repeating_engrams">
 								<div class='sheet-row' style='width: 100%; margin: 0px; padding:0px;'>
 									<div class='sheet-col' style='width: 70%; margin: 0px; padding:0px;'>
 										<input type='text' name='attr_engramquality' style='width: 100%; font-size: .8em; font-weight: normal' placeholder='Engram' />
