Updated Cargo total function

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -7888,7 +7888,7 @@
 						fields: ["shipCargo", "shipCargoRV", "shipCargoTonnage"]
 					}
 				];
-				getID(JSON.parse(JSON.stringify(repeatingAttributes)), useID);
+				getID(repeatingAttributes, useID);
 			});
 
 		var getID = function (cloneRepAttr, callback, sectionAggregate)
@@ -7918,10 +7918,11 @@
 			{
 				attributesToGet = [...attributesToGet, "shipCargoTonnage"].concat(["supply", "complexMaterials"]);
 
-				getAttrs(attributesToGet, function (attributeValues)
+				getAttrs(attributesToGet, (attributeValues) =>
 				{
-					let total =[attributeValues].reduce();
-					setAttrs({ totalResource: total });
+					const reducer = (accumulator, currentValue) => accumulator + currentValue;
+					var total = attributeValues.reduce(reducer);
+					setAttrs({"totalResource": total});
 				})
 			};
 
