add further data-i18n

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6661,9 +6661,9 @@
                         <!-- Powers Section Config window -->
                         <input type="checkbox" class="sheet-showpowerconfig" name="attr_showpowersectionconfig" value="show" style="display:none;" />
                         <div class="sheet-powerconfig">
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-section-header">Section Header: </span><input type="text" name="attr_powerlabelplural" value="Powers" /></label>
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-column-header">Column Header: </span><input type="text" name="attr_powerlabelsingular" value="Power" /></label>
-                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-pp">Power Points Abbreviation: </span><input type="text" name="attr_ppabbr" value="PP" maxlength="8" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-section-header">Section Header: </span><input type="text" data-i18n="powers" name="attr_powerlabelplural" value="Powers" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-column-header">Column Header: </span><input type="text" data-i18n="power" name="attr_powerlabelsingular" value="Power" /></label>
+                            <label class="sheet-powerconfiglabel"><span data-i18n="ab-pp">Power Points Abbreviation: </span><input type="text"  data-i18n="power-point-abbr-u" name="attr_ppabbr" value="PP" maxlength="8" /></label>
                             <hr />
                             <input type="hidden" class="sheet-showmultipleabs" name="attr_numberofabs" value="1" />
                             <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel" value="AB 1" maxlength="25" /></label>
