add further data-i18n

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6667,7 +6667,7 @@
                             <hr />
                             <input type="hidden" class="sheet-showmultipleabs" name="attr_numberofabs" value="1" />
                             <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-name">Arcane Background: </span><input type="text" name="attr_ablabel" value="AB 1" maxlength="25" /></label>
-                            <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" name="attr_ppelabel" value="Power Points" maxlength="30" /></label>
+                            <label class="sheet-powerconfiglabel sheet-label1"><span data-i18n="ab-pp-name">Power Points Label: </span><input type="text" data-i18n="power-points" name="attr_ppelabel" value="Power Points" maxlength="30" /></label>
                             <label class="sheet-powerconfiglabel sheet-label2"><span data-i18n="ab-color-indicator">Arcane Background Indicator:</span>
                                 <div class="sheet-container">
                                     <div class="sheet-child2">
