--- a/Cyberpunk Red/CyberpunkRed.html
+++ b/Cyberpunk Red/CyberpunkRed.html
@@ -105,11 +105,19 @@
     <label data-i18n="personality">Personality</label>
     <textarea name="attr_personality"></textarea>
   </div>
-  <div class="gear section">
-    <label data-i18n="gear">Gear</label>
-    <fieldset class="repeating_gear">
-      <textarea name="attr_gear"></textarea>
-    </fieldset>
+  <div class="equipment section flex-col">
+      <div class="cyberware">
+        <label data-i18n="cyberware">Cyberware</label>
+        <fieldset class="repeating_gear">
+          <textarea name="attr_gear"></textarea>
+        </fieldset>
+      </div>
+      <div class="gear">
+          <label data-i18n="gear">Gear</label>
+        <fieldset class="repeating_gear">
+          <textarea name="attr_gear"></textarea>
+        </fieldset>
+      </div>
   </div>
 </div>
 <rolltemplate class="sheet-rolltemplate-initiative">
