added new bonds page

--- a/Ironcrunch/src/html/Ironcrunch.html
+++ b/Ironcrunch/src/html/Ironcrunch.html
@@ -45,7 +45,19 @@
     </div>
   </div>
 </div>
-<div class="sheet-ironcrunch-summary">
+<div class="sheet-ironsworn-nav-bar-pages">
+  <div class="sheet-nav-child">
+    <label for="summary">Summary</label>
+  </div>
+  <div class="sheet-nav-child">
+    <label for="vows">Vows</label>
+  </div>
+  <div class="sheet-nav-child">
+    <label for="bonds">Bonds</label>
+  </div>
+</div>
+<input class="sheet-hide sheet-ironcrunch-summary" type="radio" name="attr_ironcrunch-page" id="summary" value="1" checked="checked"/>
+<div class="sheet-ironcrunch-summary sheet-hide">
   <div class="sheet-stats">
     <div class="sheet-stat">
       <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
@@ -74,7 +86,8 @@
     </div>
   </div>
 </div>
-<div class="sheet-ironcrunch-bonds">
+<input class="sheet-hide sheet-ironcrunch-bonds" type="radio" name="attr_ironcrunch-page" id="bonds" value="2"/>
+<div class="sheet-ironcrunch-bonds sheet-hide">
   <div class="sheet-bonds-track">
     <div>
       <select class="sheet-progress-input" name="attr_bond-0">
@@ -158,7 +171,8 @@
     </div>
   </div>
 </div>
-<div class="sheet-ironcrunch-vows">
+<input class="sheet-hide sheet-ironcrunch-vows" type="radio" name="attr_ironcrunch-page" id="vows" value="3"/>
+<div class="sheet-ironcrunch-vows sheet-hide">
   <input class="sheet-hide sheet-vows-Ironcrunch-mode-page" type="checkbox" name="attr_vows_ironsworn_mode_page" id="vows-Ironcrunch-mode-page"/>
   <div class="sheet-vows-Ironcrunch-mode-page">
     <div class="sheet-vows">
@@ -313,221 +327,219 @@
     </div>
   </div>
 </div>
-<div class="sheet-ironcrunch-mode"> 
-  <div class="sheet-momentum">
-    <div class="sheet-momentum-burn">
-      <input class="sheet-momentum-burn" type="checkbox" title="Burn Momentum" name="attr_momentumBurn"/><span class="sheet-momentum-burn">Burn</span>
-      <div class="sheet-momentum-burn-back"></div>
+<div class="sheet-momentum">
+  <div class="sheet-momentum-burn">
+    <input class="sheet-momentum-burn" type="checkbox" title="Burn Momentum" name="attr_momentumBurn"/><span class="sheet-momentum-burn">Burn</span>
+    <div class="sheet-momentum-burn-back"></div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="0"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">0</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="0"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">0</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="1"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+1</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="1"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+1</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="2"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+2</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="2"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+2</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="3"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+3</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="3"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+3</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="4"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+4</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="4"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+4</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="5"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+5</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="5"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+5</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="6"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+6</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="6"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+6</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="7"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+7</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="7"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+7</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="8"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+8</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="8"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+8</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="9"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+9</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="9"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+9</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="10"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+10</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="10"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+10</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="11"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+11</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="11"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+11</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="12"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+12</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="12"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+12</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="13"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+13</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="13"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+13</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="14"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+14</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="14"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+14</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="15"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+15</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="15"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+15</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="16"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+16</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="16"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+16</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="17"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+17</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="17"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+17</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="18"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+18</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="18"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+18</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="19"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+19</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="19"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+19</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="20"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">+20</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="20"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">+20</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-1"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-1</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-1"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-1</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-2"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-2</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-2"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-2</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-3"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-3</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-3"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-3</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-4"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-4</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-4"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-4</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-5"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-5</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-5"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-5</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-6"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-6</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-6"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-6</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-7"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-7</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-7"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-7</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-8"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-8</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-8"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-8</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-9"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-9</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-9"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-9</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-10"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-10</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-10"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-10</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-11"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-11</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-11"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-11</h3>
-      </div>
+  </div>
+  <div class="sheet-momentum-box">
+    <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-12"/>
+    <div class="sheet-track-box-back">
+      <h3 class="sheet-track-box-value">-12</h3>
     </div>
-    <div class="sheet-momentum-box">
-      <input class="sheet-track-box-input" type="radio" name="attr_momentum" value="-12"/>
-      <div class="sheet-track-box-back">
-        <h3 class="sheet-track-box-value">-12</h3>
-      </div>
-    </div>
-    <div class="sheet-momentum-input-box">
-      <h3>MAX
-        <h3><span name="attr_momentum_max"></span></h3>
-        <input class="sheet-hidden" type="text" name="attr_momentum_max" value="10"/>
-      </h3>
-    </div>
-    <div class="sheet-momentum-input-box">
-      <h3>RESET</h3>
-      <h3><span name="attr_momentum_reset"></span></h3>
-      <input class="sheet-hidden" type="text" name="attr_momentum_reset" value="2"/>
-    </div>
+  </div>
+  <div class="sheet-momentum-input-box">
+    <h3>MAX
+      <h3><span name="attr_momentum_max"></span></h3>
+      <input class="sheet-hidden" type="text" name="attr_momentum_max" value="10"/>
+    </h3>
+  </div>
+  <div class="sheet-momentum-input-box">
+    <h3>RESET</h3>
+    <h3><span name="attr_momentum_reset"></span></h3>
+    <input class="sheet-hidden" type="text" name="attr_momentum_reset" value="2"/>
   </div>
 </div>
 <rolltemplate class="sheet-rolltemplate-ironcrunch_moves"> 
