--- a/Cyberpunk Red/CyberpunkRed.html
+++ b/Cyberpunk Red/CyberpunkRed.html
@@ -109,7 +109,7 @@
       <div class="cyberware">
         <label data-i18n="cyberware">Cyberware</label>
         <fieldset class="repeating_gear">
-          <textarea name="attr_gear"></textarea>
+          <textarea name="attr_cyberware"></textarea>
         </fieldset>
       </div>
       <div class="gear">
